Support also kotlin tokenization